SERVER-67802 ensure mongos count can handle large values for limit